--- a/JokeApp/app/src/main/res/values/strings.xml
+++ b/JokeApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="smiley_that_indicates_a_funny_joke">Smiley that indicates a funny joke</string>
     <string name="next_joke">Next Joke</string>
     <string name="good_one">Good one!</string>
+    <string name="enter_name">Your name</string>
 </resources>
