--- a/JokeApp/app/src/main/res/values/strings.xml
+++ b/JokeApp/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">JokeApp</string>
     <string name="joke_placeholder">Here comes a Joke</string>
     <string name="smiley_that_indicates_a_funny_joke">Smiley that indicates a funny joke</string>
-    <string name="next_joke">Next Joke</string>
+    <string name="next_joke">Meh</string>
     <string name="good_one">Good one!</string>
     <string name="enter_name">Your name</string>
     <string name="your_name">Your name</string>
