--- a/JokeApp/app/src/main/res/values/strings.xml
+++ b/JokeApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_to_this_wonderful_app">Welcome to this wonderful app!</string>
+    <string name="auth_client_id">ZGxJU5DHPQcOyGlyRAz7K6eDFvuxcIfX</string>
+    <string name="auth_domain">dev-18w6525q.us.auth0.com</string>
 </resources>
