--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TaskApp</string>
+    <string name="detail">Task detail</string>
+    <string name="about_title">About</string>
 </resources>
