Restyle TaskItem, add animations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TaskApp</string>
     <string name="detail">Task detail</string>
     <string name="about_title">About</string>
+    <string name="expand_button_content_description">Expand task item</string>
 </resources>
