adds navigation rail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="detail">Task detail</string>
     <string name="about_title">About</string>
     <string name="expand_button_content_description">Expand task item</string>
+    <string name="navigation_rail">Navigate between items here</string>
 </resources>
