--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="about_title">About</string>
     <string name="expand_button_content_description">Expand task item</string>
     <string name="navigation_rail">Navigate between items here</string>
+    <string name="camera_title">Camera</string>
 </resources>
